# rusty-assessment

./: .gitignore  Taskfile.yml  docker-compose.yml
api/: Cargo.toml  Dockerfile
api/src/: handlers.rs  lib.rs  models.rs  router.rs
bendsql/: Dockerfile
etl/: Cargo.toml  Dockerfile
etl/src/: etl.rs
