[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"] }
dotenvy = "0.15.0"
anyhow = "1.0.68"
serde = "1.0.152"
# models = { path = "../models" }
# etl = { path = "../etl" }
color-eyre = "0.6.2"
reqwest = { version = "0.11.14", features = ["json"] }
serde_json = { version = "1.0.93", features = ["std"] }
databend-driver = "0.4.6"
tokio-stream = "0.1.14"

[[bin]]
name = "api"
path = "src/bin/api.rs"
