[package]
name = "etl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
polars = { version = "0.31.0", features = ["json", "lazy", "dtype-full", "serde", "strings", "cum_agg", "parquet", "temporal"] }
reqwest = { version = "0.11.18", features = ["json"] }
anyhow = "1.0.71"
rust-s3 = "0.33.0"
dotenvy = "0.15.0"

[[bin]]
name = "etl"
path = "src/bin/etl.rs"

[workspace]